# stellar-core

./: CMakeLists.txt  INSTALL.md  Makefile.am  README.md  autogen-cmake.sh  ci-build.sh  configure.ac  make-mks
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: addtestsmeta.yml  build.yml
Builds/VisualStudio/: stellar-core.vcxproj  stellar-core.vcxproj.filters
Builds/VisualStudio2015/: stellarx.sln  stellarx.vcxproj
Builds/VisualStudio2015/libmedida/: libmedida.vcxproj
Builds/lib/libsodium/: CMakeLists.txt
Builds/lib/xdrpp/: CMakeLists.txt
docs/: versioning.md
lib/: CMakeLists.txt
lib/util/: easylogging++.cc  uint128_t.cpp  uint128_t.h
src/: CMakeLists.txt
src/bucket/: Bucket.cpp  BucketApplicator.cpp  BucketApplicator.h  BucketList.cpp  BucketManagerImpl.cpp  BucketManagerImpl.h  BucketMergeMap.cpp  BucketMergeMap.h  BucketTests.cpp  FutureBucket.cpp
src/bucket/test/: BucketMergeMapTests.cpp
src/catchup/: ApplyBucketsWork.cpp  ApplyBufferedLedgersWork.cpp  ApplyCheckpointWork.cpp  ApplyLedgerChainWork.cpp  CatchupManagerImpl.cpp  CatchupWork.cpp  DownloadApplyTxsWork.cpp  VerifyLedgerChainWork.cpp
src/catchup/simulation/: TxSimApplyTransactionsWork.cpp
src/catchup/test/: CatchupWorkTests.cpp
src/crypto/: Curve25519.h
src/herder/: HerderImpl.cpp  HerderPersistenceImpl.cpp  HerderSCPDriver.cpp  HerderTests.cpp  PendingEnvelopes.cpp  PendingEnvelopes.h  QuorumIntersectionCheckerImpl.h  QuorumTracker.cpp  QuorumTracker.h  TransactionQueue.cpp  TransactionQueue.h  TxSetFrame.cpp  TxSetFrame.h  Upgrades.cpp  Upgrades.h  UpgradesTests.cpp
src/herder/test/: PendingEnvelopesTests.cpp  QuorumIntersectionTests.cpp
src/history/: HistoryManagerImpl.cpp  HistoryManagerImpl.h  HistoryTests.cpp  HistoryTestsUtils.cpp  InferredQuorum.h  StateSnapshot.cpp
src/history/test/: HistoryTests.cpp
src/historywork/: BatchDownloadWork.cpp  DownloadBucketsWork.cpp  DownloadVerifyTxResultsWork.cpp  GetHistoryArchiveStateWork.cpp  Progress.cpp  PutSnapshotFilesWork.cpp  VerifyTxResultsWork.cpp
src/invariant/: AccountSubEntriesCountIsValid.h  AccountSubEntriesCountIsValidTests.cpp  BucketListIsConsistentWithDatabase.cpp  BucketListIsConsistentWithDatabaseTests.cpp  ConservationOfLumensTests.cpp  InvariantManagerImpl.cpp  InvariantManagerImpl.h  InvariantTestUtils.cpp  InvariantTestUtils.h  InvariantTests.cpp  LedgerEntryIsValid.cpp  LiabilitiesMatchOffers.cpp  LiabilitiesMatchOffersTests.cpp
src/ledger/: AccountFrame.cpp  CheckpointRange.cpp  InMemoryLedgerTxnRoot.cpp  InMemoryLedgerTxnRoot.h  InternalLedgerEntry.cpp  LedgerDelta.cpp  LedgerDelta.h  LedgerHashUtils.h  LedgerHeaderTests.cpp  LedgerHeaderUtils.cpp  LedgerHeaderUtils.h  LedgerManager.h  LedgerManagerImpl.cpp  LedgerManagerImpl.h  LedgerMaster.cpp  LedgerRange.cpp  LedgerState.cpp  LedgerState.h  LedgerStateAccountSQL.cpp  LedgerStateDataSQL.cpp  LedgerStateEntry.cpp  LedgerStateEntry.h  LedgerStateHeader.cpp  LedgerStateHeader.h  LedgerStateImpl.h  LedgerStateOfferSQL.cpp  LedgerStateTests.cpp  LedgerStateTrustLineSQL.cpp  LedgerTestUtils.cpp  LedgerTests.cpp  LedgerTxn.cpp  LedgerTxn.h  LedgerTxnAccountSQL.cpp  LedgerTxnDataSQL.cpp  LedgerTxnImpl.h  LedgerTxnOfferSQL.cpp  LedgerTxnTrustLineSQL.cpp  LiabilitiesTests.cpp  TrustLineWrapper.cpp  TrustLineWrapper.h
src/ledger/test/: LedgerCloseMetaStreamTests.cpp  LedgerTxnTests.cpp
src/main/: Application.cpp  Application.h  ApplicationImpl.cpp  ApplicationImpl.h  CommandHandler.cpp  CommandHandler.h  CommandLine.cpp  CommandLine.h  Config.cpp  Maintainer.cpp  dumpxdr.cpp
src/overlay/: FloodTests.cpp  ItemFetcher.cpp  LoadManager.cpp  OverlayManagerImpl.cpp  Peer.cpp  PeerManager.cpp  StellarXDR.x  TCPPeer.cpp  TCPPeer.h  Tracker.cpp
src/overlay/test/: FloodTests.cpp  OverlayTests.cpp
src/scp/test/: SCPTests.cpp
src/simulation/: CoreTests.cpp  LoadGenerator.cpp  LoadGenerator.h  Simulation.cpp
src/test/: TestAccount.cpp  TestPrinter.cpp  TestUtils.cpp  TestUtils.h  TxTests.cpp  test.cpp
src/transactions/: AllowTrustOpFrame.cpp  ChangeTrustTests.cpp  CreateAccountOpFrame.cpp  CreateAccountOpFrame.h  FeeBumpTransactionFrame.cpp  FeeBumpTransactionFrame.h  InflationOpFrame.cpp  InflationTests.cpp  ManageDataOpFrame.cpp  ManageDataOpFrame.h  ManageDataTests.cpp  ManageOfferOpFrame.cpp  ManageOfferOpFrame.h  ManageOfferOpFrameBase.cpp  ManageOfferOpFrameBase.h  MergeOpFrame.cpp  MergeTests.cpp  OfferExchange.cpp  OfferExchange.h  OfferTests.cpp  OperationFrame.cpp  OperationFrame.h  PathPaymentOpFrame.cpp  PathPaymentOpFrameBase.cpp  PathPaymentOpFrameBase.h  PathPaymentTests.cpp  PaymentOpFrame.cpp  PaymentOpFrame.h  PaymentTests.cpp  SetOptionsOpFrame.cpp  SetOptionsTests.cpp  SponsorshipUtils.cpp  SponsorshipUtils.h  TransactionFrame.cpp  TransactionFrame.h  TransactionFrameBase.h  TransactionUtils.cpp  TransactionUtils.h  TxEnvelopeTests.cpp  TxResultsTests.cpp
src/transactions/test/: OfferTests.cpp
src/util/: Backtrace.cpp  Backtrace.h  Decimal.h  DecimalTests.cpp  Fs.cpp  GlobalChecks.cpp  LogSlowExecution.h  Logging.cpp  Logging.h  Timer.cpp  Timer.h  numeric.cpp
src/util/test/: MetricTests.cpp  XDRStreamTests.cpp
src/work/: BasicWork.cpp  ConditionalWork.cpp
src/work/test/: WorkTests.cpp
src/xdr/: Stellar-ledger-entries.x  Stellar-ledger.x  Stellar-overlay.x  Stellar-transaction.x
test-tx-meta-baseline/current/: AllowTrustTests.json
test-tx-meta-baseline/next/: AllowTrustTests.json
